--- a/templates/login.html
+++ b/templates/login.html
@@ -13,7 +13,7 @@
          <form class="px-8 pt-6 pb-8 mb-4">
                {% with messages = get_flashed_messages() %}
                {% if messages %}
-            <p class="text-s text-red-500 italic">
+            <p class="font-sans text-s text-red-500 italic">
                {{ messages[0] }} 
             </p>
                {% endif %}
