--- a/templates/login.html
+++ b/templates/login.html
@@ -38,6 +38,13 @@
                Sign In
                </button>
             </div>
+         <div class="text-white mt-4"> 
+            <span class="text-white">Don't have an account? <a class= "underline" href="{{url_for('signup')}}"> Sign up</a>
+            </span>
+           
+         </div>
+               
+           
       </form>
    </div>
    </body>
