--- a/templates/home.html
+++ b/templates/home.html
@@ -43,6 +43,17 @@
     
     {% endif %}
 
+
+    <div class="mt-10">
+      <a href="{{url_for('pinterestlogin')}}">
+      <button class="w-full text-2xl bg-red-400 hover:bg-green-600 text-white font-bold py-8 px-16 rounded">
+        Authorize Pinterest Account
+      </button>
+      </a>
+    </div>
+    
+ 
+
     <div id="google_auth" class="mt-10">
       <a href="{{url_for('googlelogin')}}">
       <button class="w-full text-2xl bg-blue-400 hover:bg-blue-600 text-white font-bold py-8 px-16 rounded">
